ThreadSanitizer: data race [@ assign_assuming_AddRef] vs. [@ get] through [@ GetPerformanceCounter] on mPerformanceCounter
Categories
(Core :: DOM: Workers, defect)
Tracking
()
People
(Reporter: decoder, Assigned: perry)
References
(Blocks 1 open bug)
Details
Attachments
(3 files)
The attached crash information was detected while running CI tests with ThreadSanitizer on try revision b17984833e2de5dc066fee19b886994cb35ce80e.
For detailed crash information, see attachment.
This looks like a variant of bug 1615014 and it pops up on try when I remove the left-over suppression for that bug. I assume the fix in bug 1615014 is somehow incomplete.
General information about TSan reports
Why fix races?
Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.
Rating
If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.
False Positives / Benign Races
Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].
[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf
Suppressing unfixable races
If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.
| Reporter | ||
Comment 1•5 years ago
|
||
| Assignee | ||
Comment 2•5 years ago
|
||
- Fixes a data race where the member variable is being written to by
EnsurePerformanceCounter on the worker thread while being read on a separate
thread (via Worker.postMessage). - Apply some pointer guildelines to the member variable getters.
- Constify some things that should be const.
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Comment 5•5 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 6•5 years ago
|
||
Comment 8•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Description
•